--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -11,6 +11,7 @@
 ########################################################################
 include(GrPlatform) #define LIB_SUFFIX
 find_package(BTBB REQUIRED)
+find_package(OpenMP)
 
 include_directories(${Boost_INCLUDE_DIR} ${LIBBTBB_INCLUDE_DIR})
 link_directories(${Boost_LIBRARY_DIRS})
@@ -33,7 +34,7 @@ if(NOT bluetooth_sources)
 endif(NOT bluetooth_sources)
 
 add_library(gnuradio-bluetooth SHARED ${bluetooth_sources})
-target_link_libraries(gnuradio-bluetooth btbb gnuradio::gnuradio-runtime gnuradio-filter gnuradio-blocks gnuradio-fft af)
+target_link_libraries(gnuradio-bluetooth btbb gnuradio::gnuradio-runtime gnuradio-filter gnuradio-blocks gnuradio-fft af OpenMP::OpenMP_CXX)
 target_include_directories(gnuradio-bluetooth
     PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
     PUBLIC $<INSTALL_INTERFACE:include>
